--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -22,8 +22,8 @@
    "source": [
     "## **INDEX**\n",
     "\n",
-    "- **STEP 1: PROBLEM DEFINITION**\n",
-    "- **STEP 2: DATA COLLECTION, EXPLORATION, AND CLEANING**\n",
+    "- **STEP 1: PROBLEM DEFINITION AND DATA COLLECTION**\n",
+    "- **STEP 2: DATA EXPLORATION, AND CLEANING**\n",
     "- **STEP 3: UNIVARIATE VARIABLE ANALYSIS**\n",
     "- **STEP 4: MULTIVARIATE VARIABLE ANALYSIS**\n",
     "- **STEP 5: FEATURE ENGINEERING**\n",
