--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -371,7 +371,8 @@
     "\n",
     "- 2.1. Exploration: Understanding the Features\n",
     "- 2.2. Identifying null values in each feature\n",
-    "- 2.3. Eliminating Irrelevant Information"
+    "- 2.3. Eliminating Duplicates\n",
+    "- 2.4. Eliminating Irrelevant Information"
    ]
   },
   {
@@ -1134,7 +1135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.3. ELIMINATING IRRELEVANT INFORMATION**"
+    "**2.3. ELIMINATING DUPLICATES**"
    ]
   },
   {
@@ -1164,6 +1165,13 @@
     "    print(f\"Duplicate rows have been removed. Row count reduced from {initial_row_count} to {bank.shape[0]}.\")\n",
     "else:\n",
     "    print(\"No duplicate rows found.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2.4. ELIMINATING IRRELEVANT INFORMATION**"
    ]
   },
   {
